--- a/Client/index.html
+++ b/Client/index.html
@@ -4,22 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <title>Shopping Cart</title>
-	<script src="lib/jquery/dist/jquery.min.js"></script>
+	<script src="/lib/jquery/dist/jquery.min.js"></script>
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css">
 
 	<!-- Optional theme -->
-	<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap-theme.min.css">
 
 	<!-- Latest compiled and minified JavaScript -->
-	<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
   <div id="app"></div>  
-	<script src="../public/bundle.js"></script>
+	<script src="/js/bundle.js"></script>
 </body>
 
 </html>
