--- a/Client/index.html
+++ b/Client/index.html
@@ -13,7 +13,7 @@
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="/css/style.css">
 
 </head>
 
