Add Email JS to Client
Allows client to send user confirmation emails upon payment

 Changes to be committed:
	modified:   Client/index.html

--- a/Client/index.html
+++ b/Client/index.html
@@ -14,7 +14,13 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="/css/style.css">
-
+ 
+	<script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+	<script type="text/javascript">
+	   (function(){
+	      emailjs.init("user_hA0BAEj27D06eeuZlV3Hi");
+	   })();
+	</script>
 </head>
 
 <body>
