Modify Email Content
 Changes to be committed:
	modified:   Client/email/email.html

--- a/Client/email/email.html
+++ b/Client/email/email.html
@@ -44,7 +44,7 @@
 				<p>Washington, DC 20036</p>
 			</div>
 		</div>
-		<h3>ORDER</h3>
+		<h3>ORDER DETAILS</h3>
 		<table>
 			<tr>
 				<th align="middle">Quantity</th>
