Add Tax Line to Confirmation Email Template
 Changes to be committed:
	modified:   Client/email/email.html

--- a/Client/email/email.html
+++ b/Client/email/email.html
@@ -69,12 +69,17 @@
 			<tr>
 				<td></td>
 				<td></td>
-				<td align="right">Tip: $1.20</td>
+				<td align="right">tax: $1.82</td>
 			</tr>
 			<tr>
 				<td></td>
 				<td></td>
-				<td align="right">Total: $19.40</td>
+				<td align="right">Tip: $4.00</td>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
+				<td align="right">Total: $24.02</td>
 			</tr>			
 		</table>
 	</div>
